gitops/apps/uptime-kuma/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime-kuma
  namespace: apps
spec:
  parentRefs:
    - name: home-gateway
      namespace: kube-system
  hostnames:
    - "kuma.home.lab"
  rules:
    - backendRefs:
        - name: uptime-kuma
          port: 3001
